[package]
name = "bevy_rafx"
version = "0.1.0"
authors = ["Jonas Matser <github@jonasmatser.nl>"]
edition = "2018"

[[bin]]
name = "bevy_rafx"
path = "src/bin.rs"

[lib]
name = "bevy_rafx"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raw-window-handle = "0.3.3"
lazy_static = "1.4.0"
bevy_mod_debugdump = { path = "../bevy_mod_debugdump", default-features = false }
bincode = "1.3.1"

[dependencies.bevy]
path = "../bevy"
default-features = false
features = ["bevy_winit"]

[target.'cfg(target_os = "windows")'.dependencies]
rafx = { path = "../rafx/rafx", features = ["rafx-vulkan", "framework"] }
