[package]
name = "bevy_rafx"
version = "0.0.1"
edition = "2018"

[workspace]
members = ["crates/*", "crates/features/*"]
exclude = ["crates/features"]

[dependencies]
bevy_rafx_plugin = { path = "crates/bevy_rafx_plugin" }
mesh_renderer = { path = "crates/features/mesh_renderer" }

[dependencies.bevy]
path = "../bevy"
default-features = false
features = ["bevy_winit"]

[dev-dependencies]
bevy_mod_debugdump = { version = "0.1.0", default-features = false }

[build-dependencies]
rafx-shader-processor = { path = "../rafx/rafx-shader-processor" }
env_logger = "0.6"

[features]
print_schedule = []

[[example]]
name = "mesh"
path = "examples/mesh.rs"

[patch.crates-io]
bevy = { path = "../bevy" }
rafx = { path = "../rafx/rafx" }
bevy_mod_debugdump = { path = "../bevy_mod_debugdump" }
