[package]
name = "bevy_rafx_gltf"
version = "0.5.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Bevy Engine GLTF loading"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy = { version = "0.5", default-features = false, features = ["bevy_winit"] }
mesh_renderer_plugin = { path = "../mesh_renderer_plugin" }
# other
gltf = { version = "0.15.2", default-features = false, features = [
    "utils",
    "names",
    "KHR_materials_unlit"
] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.13.0"
percent-encoding = "2.1"
