[package]
name = "bevy_rafx_plugin"
version = "0.1.0"
authors = ["Jonas Matser <github@jonasmatser.nl>"]
edition = "2018"

[lib]
name = "bevy_rafx_plugin"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raw-window-handle = "0.3.3"
lazy_static = "1.4.0"
bincode = "1.3.1"
bevy = { version = "0.5", default-features = false, features = ["bevy_winit"] }

[target.'cfg(target_os = "windows")'.dependencies]
rafx = { version = "0.0.12", features = ["rafx-vulkan", "framework", "assets"] }
# [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# rafx = { path = "../rafx/rafx", features = ["rafx-metal", "framework"] }
